# CAL

./: .gitignore  README.md
Class01/: CMakeLists.txt  main.cpp
Class01/Tests/: Change.cpp  Factorial.cpp  Partitioning.cpp  Sum.cpp  Sum.cpp.bck  Sum.h  tests.cpp
Class02/Tests/: Labirinth.cpp  Sudoku.cpp  Sudoku.h  tests.cpp
Class03/: CMakeLists.txt
Class03/Tests/: NearestPoints.cpp  tests.cpp
Class04/Tests/: Graph.h
Class05/Tests/: Graph.h  tests.cpp
Class05_2/Tests/: Graph.h  tests.cpp
Class06/Tests/: Graph.h  tests.cpp
Class07/: FichaJUNG.cpp
Class07/resources/mapa2/: edges.txt
Class07_2/Tests/: tests.cpp
Class08/Tests/: Graph.h
Class09/: CMakeLists.txt
Class09/Tests/: Graph.h
Proj/: README.md
Proj/report/: biblio.bib  report.tex
Proj/report/graphing/: graphing.py  meet_graphing.py  tsp_graphing.py
Proj/src/: CMakeLists.txt  GraphImporter.cpp  GraphRenderer.cpp  MeetingPoint.cpp  ProblemSolver.cpp  main.cpp
Proj/src/import/: graph_json2txt.py  osm_graph_simplify.py  unused_parser.py
Proj/src/include/: Coordinate.h  Graph.h  GraphImporter.h  GraphRenderer.h  MeetingPoint.h  ProblemSolver.h
Proj/src/lib/: graphviewer.cpp
Proj/src/resources/: cleanup_input_file.sh  config
Proj/src/resources/grid_graphs/16x16/: edges.txt.clean  nodes.txt.clean  workers.txt
Proj/src/resources/grid_graphs/4x4/: edges.txt.clean  nodes.txt.clean
Proj/src/resources/grid_graphs/8x8/: edges.txt.clean  nodes.txt.clean
Proj/src/resources/porto/: bus_stops  companies  dead_edges  dead_edges_2  edges  nodes  workers  workers_2
